--- a/ProyectoEscritorio/nbproject/private/private.properties
+++ b/ProyectoEscritorio/nbproject/private/private.properties
@@ -1,11 +1,11 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\cebal\\Desktop\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
-file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\cebal\\Desktop\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
-file.reference.mysql-connector-j-9.0.0.jar-1=C:\\Users\\cebal\\Desktop\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
-file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\cebal\\Desktop\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
-file.reference.mysql-connector-java-5.1.13-bin.jar-1=C:\\Users\\cebal\\Desktop\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
+file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\macro\\Desktop\\NuevoProyecto\\GenerarReporte\\mysql-connector-java-5.1.13-bin.jar
+file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\macro\\Desktop\\NuevoProyecto\\GenerarReporte\\mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-j-9.0.0.jar-1=C:\\Users\\macro\\Desktop\\NuevoProyecto\\GenerarReporte\\mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\macro\\Desktop\\NuevoProyecto\\GenerarReporte\\mysql-connector-java-5.1.13-bin.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar-1=C:\\Users\\macro\\Desktop\\NuevoProyecto\\GenerarReporte\\mysql-connector-java-5.1.13-bin.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\macro\\AppData\\Roaming\\NetBeans\\22\\build.properties
