--- a/ProyectoWeb/nbproject/project.properties
+++ b/ProyectoWeb/nbproject/project.properties
@@ -27,7 +27,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.gson-2.11.0.jar=gson-2.11.0.jar
 file.reference.itextpdf-5.5.13.2.jar=../../../../Downloads/itextpdf-5.5.13.2.jar
+file.reference.jbcrypt-0.4.jar=..\\jbcrypt-0.4.jar
+file.reference.json-20240303.jar=json-20240303.jar
 file.reference.mysql-connector-j-9.0.0.jar=..\\Proyecto-Control-de-Stock\\mysql-connector-j-9.0.0.jar
 file.reference.mysql-connector-j-9.1.0.jar=..\\Proyecto-Control-de-Stock\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=..\\ProyectoEscritorio\\mysql-connector-j-9.1.0.jar
@@ -45,7 +48,11 @@ javac.classpath=\
     ${reference.Template.jar}:\
     ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
     ${reference.Template-1.jar}:\
-    ${file.reference.itextpdf-5.5.13.2.jar}
+    ${file.reference.itextpdf-5.5.13.2.jar}:\
+    ${reference.Template-1.jar}:\
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.gson-2.11.0.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
